# driving_duration_scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg  shell.nix
driving_duration_scraper/: settings.py
driving_duration_scraper/spiders/: OpenRouteService.py  VbbRest.py  VbbRestJourneys.py  VbbRestStopIds.py
driving_time_scraper/: items.py  middlewares.py  pipelines.py  settings.py
driving_time_scraper/spiders/: OpenRouteService.py
examples/: destinations.csv  sources.csv
